<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Title -->
        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection_status"
            android:textSize="26sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="60dp" />

        <!-- Scan / Stop Scan / Disconnect -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="3"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btnScan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scan_xiao"
                android:padding="10dp"
                android:layout_margin="4dp" />

            <Button
                android:id="@+id/btnDisconnect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connect_btn"
                android:padding="10dp"
                android:layout_margin="4dp" />
        </LinearLayout>

        <!-- Start Streaming Button -->
        <Button
            android:id="@+id/btnStartStreaming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Streaming starten"
            android:textSize="18sp"
            android:padding="14dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="#000000"
            android:text="@string/accelerometer"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Ax / Ay / Az -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="#FF7F00"
                android:padding="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvAccelX"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:text="@string/init_value"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="#34A12C"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp">

                <TextView
                    android:id="@+id/tvAccelY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:text="@string/init_value"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="#0A51A1"
                android:padding="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvAccelZ"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:text="@string/init_value"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/gyroscope"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Gx / Gy / Gz -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="#FF7F00"
                android:padding="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvGyroX"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:text="@string/init_value"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="#34A12C"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp">

                <TextView
                    android:id="@+id/tvGyroY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:text="@string/init_value"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="#0A51A1"
                android:padding="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvGyroZ"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:text="@string/init_value"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/accelChart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="8dp"/>

        <RadioGroup
            android:id="@+id/sensorSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/rbAccel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Besch."
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbGyro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gyroskop"/>
        </RadioGroup>

    </LinearLayout>

</ScrollView>
